--- a/package.json
+++ b/package.json
@@ -9,22 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.29.0",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/list": "^1.9.0",
+    "@editorjs/paragraph": "^2.11.3",
+    "@lexical/react": "^0.13.1",
     "@neondatabase/serverless": "^0.7.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/draft-js": "^0.11.17",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
+    "draft-js": "^0.11.7",
     "drizzle-orm": "^0.29.3",
+    "immutable": "^5.0.0-beta.5",
+    "lexical": "^0.13.1",
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-editor-js": "^2.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
